Metav2 lowercase effective-make-and-model fix

Now correctly sanitizing incoming effective-make-and-model on ResolvePpd
call.

BUG=chromium:804014
TEST=wrote/ran unit test + checked manually that bug fixed

Change-Id: I358d0784b995ec94073ae707060c63247db49a09